Amended padding-top to stop the bottom of content being hidden by the footer

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -22,7 +22,7 @@ body {
 
 footer {
     background-color: #e6ad73;
-    padding-top: 10px;
+    padding-top: 0px;
     padding-bottom: 0px;
     position:fixed;
     bottom:0;
